# mc-autoclicker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  requirements.txt
src/service/: autoclick.py
